add desciption al buton for obtain number

--- a/app/javascript/scss/app.scss
+++ b/app/javascript/scss/app.scss
@@ -12,7 +12,9 @@
 
   background-color: var(--background-color);
   color: var(--text-color);
-  
+  p{
+    font-size: 1.3rem;
+  }
   .schedule {
     .header {
       display: grid;
