add multiple numbers

--- a/app/views/raffles/new.slim
+++ b/app/views/raffles/new.slim
@@ -1,3 +1,32 @@
+.row
+  .col-8
+    h1 ¿Cómo Comprar?
+.row
+  .col-8
+    p Para comprar debes realizar una tranferencia a cualquiera de estas cuentas con el asunto 
+.row
+  .col-3
+    h3 Asunto
+  .col-9
+    input.form-control type="text" value="Rifa camila #{@number}"
+.row
+  .col
+    h1 Cuentas
+.row
+  .col-6
+    pre CAMILA IGNACIA CORNEJO ALARCON
+      18.829.897-4
+      Cuenta Vista
+      Nº 0-070-58-76569-9
+      Banco Santander
+      camilaycamilo10@gmail.com
+  .col-6
+    pre CAMILA IGNACIA CORNEJO ALARCON
+      18.829.897-4
+      Cuenta Rut
+      Nº 18829897
+      Banco Estado
+      camilaycamilo10@gmail.com
 = form_for 'raffle', url: raffles_path do
   .form-group
     label for="name" Nombre 
