--- a/app/javascript/scss/app.scss
+++ b/app/javascript/scss/app.scss
@@ -15,6 +15,37 @@
   p{
     font-size: 1.3rem;
   }
+  pre{
+    font-size: 1.5rem;
+  }
+  .selected-number input{
+    display: none;
+  }
+  label {
+    display: inline-block;
+    color: black;
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+    outline: 1px solid var(--accent-color);
+    padding: 0.5rem;
+    text-align: center;
+    padding: 0.5rem 0;
+    text-align: center;
+    font-size: 2rem;
+    cursor: pointer;
+  }
+  input[type="checkbox"]:checked + label {
+    border: 1px solid white;
+    color: white;
+    background-color: rgb(89, 0, 71);
+  }
+  input[type="checkbox"]:hover + label {
+    border: 1px solid white;
+    color: black;
+    background-color: rgb(201, 92, 170);
+  }
+  
   .schedule {
     .header {
       display: grid;
