--- a/app/views/raffles/index.slim
+++ b/app/views/raffles/index.slim
@@ -4,14 +4,15 @@
 
 h1 Rifa
 .schedule
-  .body
-    - 500.times.each do |number|
-      - unless raffles.include? (number+1).to_s
-        = link_to new_raffle_path(number: number),  class: 'day' do
-          p.day-number = number+1
-          
-      - else
-        .day.invalid
-          .float-end
-            span.shift-pill[style="background-color: green"] Vendido
-          p.day-number = number+1
+  = form_for 'numbers', url: new_raffle_path, method: :get do
+    .body.selected-number 
+      - 500.times.each do |number|
+        - unless raffles.include? (number+1).to_s
+          input.form-control type="checkbox" name="number[#{number+1}]" class="day" id="#{number+1}"
+            label[for="#{number+1}"] = number+1
+        - else
+          .day.invalid
+            .float-end
+              span.shift-pill[style="background-color: green"] Vendido
+            p.day-number = number+1
+    button.btn.btn-primary type="submit"  Agregar
