--- a/app/javascript/scss/app.scss
+++ b/app/javascript/scss/app.scss
@@ -28,9 +28,8 @@
     width: 100%;
     height: 100%;
     outline: 1px solid var(--accent-color);
-    padding: 0.5rem;
     text-align: center;
-    padding: 0.5rem 0;
+    padding: 0.5rem 0.5rem;
     text-align: center;
     font-size: 2rem;
     cursor: pointer;
