add floating button

--- a/app/views/raffles/index.slim
+++ b/app/views/raffles/index.slim
@@ -15,4 +15,4 @@ h1 Rifa
             .float-end
               span.shift-pill[style="background-color: green"] Vendido
             p.day-number = number+1
-    button.btn.btn-primary type="submit"  Agregar
+    button.btn.btn-primary.float  type="submit"  Comprar
