--- a/app/javascript/scss/app.scss
+++ b/app/javascript/scss/app.scss
@@ -34,6 +34,19 @@
     font-size: 2rem;
     cursor: pointer;
   }
+  .float{
+    position:fixed;
+    width:150px;
+    height:70px;
+    bottom:140px;
+    right:140px;
+    background-color:#0C9;
+    color:#FFF;
+    border-radius:20px;
+    text-align:center;
+    box-shadow: 2px 2px 3px #999;
+    font-size: 30px;
+  }
   input[type="checkbox"]:checked + label {
     border: 1px solid white;
     color: white;
