--- a/app/views/raffles/index.slim
+++ b/app/views/raffles/index.slim
@@ -1,18 +1,24 @@
 - raffles = []
 - @raffles.each do |raffle|
   - raffles << raffle.number.to_s
-
-h1 Rifa
-.schedule
-  = form_for 'numbers', url: new_raffle_path, method: :get do
-    .body.selected-number 
-      - 500.times.each do |number|
-        - unless raffles.include? (number+1).to_s
-          input.form-control type="checkbox" name="number[#{number+1}]" class="day" id="#{number+1}"
-            label[for="#{number+1}"] = number+1
-        - else
-          .day.invalid
-            .float-end
-              span.shift-pill[style="background-color: green"] Vendido
-            p.day-number = number+1
-    button.btn.btn-primary.float  type="submit"  Comprar
+header.header
+  nav.navbar.navbar-expand-lg.navbar-light.bg-light.fixed-top
+    a.navbar-brand.p-3 href="#"  Rifa camila
+    
+.row.after-nav
+  .col
+    p Selecciona uno o más números, y dale al botón comprar.
+.row
+  .schedule
+    = form_for 'numbers', url: new_raffle_path, method: :get do
+      .body.selected-number 
+        - 500.times.each do |number|
+          - unless raffles.include? (number+1).to_s
+            input.form-control type="checkbox" name="number[#{number+1}]" class="day" id="#{number+1}"
+              label[for="#{number+1}"] = number+1
+          - else
+            .day.invalid
+              .float-end
+                span.shift-pill[style="background-color: green"] Vendido
+              p.day-number = number+1
+      button.btn.btn-primary.float  type="submit"  Comprar
