--- a/app/javascript/scss/app.scss
+++ b/app/javascript/scss/app.scss
@@ -16,7 +16,7 @@
     font-size: 1.3rem;
   }
   pre{
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
   .selected-number input{
     display: none;
@@ -57,7 +57,9 @@
     color: black;
     background-color: rgb(201, 92, 170);
   }
-  
+  .after-nav{
+    margin-top: 100px;
+  }
   .schedule {
     .header {
       display: grid;
@@ -160,6 +162,12 @@
     position: fixed;
     top: 1rem;
     right: 1rem;
+  }
+}
+.after-nav{
+  .form-control-label abbr {
+    text-decoration: none;
+    font-weight: normal;
   }
 }
 
