--- a/app/views/prices/index.slim
+++ b/app/views/prices/index.slim
@@ -10,7 +10,7 @@
     p Lamentablemente a mediados de Febrero, Camila sufrio una crisis de dolor y otros sintomas que hacían pensar en que los malditos calculos habían vuelto.
     p Es por ello que luego de una hospitalación y varios controles, los doctores decidierón operar, pero debido al coronavirus y a la falta de camas en el sector público, debimos buscar otras opciones.
     p Luego de buscar una llegamos a una opción que se ajustaba de alguna forma al presupuesto, pero aun nos falta un extra que cubrir.
-    p es por ello que esta rifa cuenta con 500 numeros, los cuales costean exactamente los $500.000 que nos faltan para operar de forma urgente.
+    p es por ello que esta rifa cuenta con 500 numeros, lo que ayudan a costear una parte de la operación.
   .col-2
 
 
