--- a/app/views/prices/index.slim
+++ b/app/views/prices/index.slim
@@ -7,9 +7,9 @@
 .row.p-3 
   .col-10
     p Rifa a beneficio de Camila, Camiloka, Tia Loca, La Secretaria o como ustedes la conozcan.
-    p Lamentablemente a mediados de Febrero, Camila sufrio una crisis de dolor y otros sintomas que hacían pensar en que los malditos calculos habían vuelto.
-    p Es por ello que luego de una hospitalación y varios controles, los doctores decidierón operar, pero debido al coronavirus y a la falta de camas en el sector público, debimos buscar otras opciones.
-    p Luego de buscar una llegamos a una opción que se ajustaba de alguna forma al presupuesto, pero aun nos falta un extra que cubrir.
+    p Lamentablemente a mediados de Febrero, Camila sufrío una crisis de dolor y otros síntomas que hacían pensar en que los malditos calculos habían vuelto.
+    p Es por ello que luego de una hospitalización y varios controles, los doctores decidierón operar, pero debido al coronavirus y a la falta de camas en el sector público, recurrimos a otras opciones.
+    p Luego de buscar, llegamos a una opción que se ajustaba de alguna forma al presupuesto, pero aun nos falta un extra que cubrir.
     p es por ello que esta rifa cuenta con 500 numeros, lo que ayudan a costear una parte de la operación.
   .col-2
 
@@ -27,10 +27,11 @@
             h5.card-title = "#{price.number} #{price.name}"
             p.card-text  = "#{price.description}"
         .card-footer
-          - unless price.rrss == 'Anónimo'
+          - anon = "%w[Anónimo Anonimo anónimo anonimo]"
+          - unless anon.include?(price.rrss)
             a.btn.btn-primary href="#{price.rrss}" target="blank_"  RRSS 
           - else
-            p Anonimo
+            p Anónimo
 
 
 css:
