--- a/app/views/raffles/new.slim
+++ b/app/views/raffles/new.slim
@@ -1,4 +1,7 @@
-.row
+header.header
+  nav.navbar.navbar-expand-lg.navbar-light.bg-light.fixed-top.container
+    a.navbar-brand.p-3 href="#{root_path}"  Volver a Premios
+.row.after-nav
   .col-8
     h1 ¿Cómo Comprar?
 .row
