--- a/app/views/raffles/new.slim
+++ b/app/views/raffles/new.slim
@@ -1,11 +1,11 @@
 header.header
   nav.navbar.navbar-expand-lg.navbar-light.bg-light.fixed-top.container
-    a.navbar-brand.p-3 href="#{root_path}"  Volver a Premios
+    a.navbar-brand.p-3 href="#{raffles_path}"  Volver Números
 .row.after-nav
   .col-8
     h1 ¿Cómo Comprar?
 .row
-  .col-8
+  .col
     p Para comprar debes realizar una tranferencia a cualquiera de estas cuentas con el asunto 
     p Luego ingresa tus datos, y en menos de 24 horas te enviamos un mensaje para confirmar la compra.
 .row.p-5
@@ -50,8 +50,8 @@ header.header
         .form-control-label for="email" Email
         input#email.form-control placeholder=("email") name="raffle[email]" type="text"
       .form-group
-        .form-control-label for="comprobante" Comprobante
-        input#comprobante.form-control  name="raffle[comprobante]" required="true" type="file"
+        input.inputfile#comprobante  name="raffle[comprobante]" required="true" type="file"
+        .label for="comprobante" Comprobante
       input.form-control name="raffle[number]" type="hidden" value="#{@number}" 
       
-      button.btn.btn-primary type="submit"  Agregar
+      button.btn.btn-primary.p-2.m-2 type="submit"  Agregar
