--- a/app/views/raffles/new.slim
+++ b/app/views/raffles/new.slim
@@ -50,8 +50,8 @@ header.header
         .form-control-label for="email" Email
         input#email.form-control placeholder=("email") name="raffle[email]" type="text"
       .form-group
-        input.inputfile#comprobante  name="raffle[comprobante]" required="true" type="file"
         .label for="comprobante" Comprobante
+        input#comprobante  name="raffle[comprobante]" required="true" type="file"
       input.form-control name="raffle[number]" type="hidden" value="#{@number}" 
       
       button.btn.btn-primary.p-2.m-2 type="submit"  Agregar
