--- a/app/views/prices/index.slim
+++ b/app/views/prices/index.slim
@@ -1,6 +1,6 @@
 header.header
   nav.navbar.navbar-expand-lg.navbar-light.bg-light.fixed-top.p-2.container
-    a.navbar-brand.p-2 href="#"  GRAN RIFA GRAN
+    a.navbar-brand.p-2 href="#" Rifa Camila
     = link_to raffles_path, class: 'btn btn-sm btn-primary' do
       h3 Comprar Número
     
