--- a/app/javascript/scss/app.scss
+++ b/app/javascript/scss/app.scss
@@ -222,7 +222,7 @@
   font-size: 1.25em;
   font-weight: 700;
   color: white;
-  background-color: black;
+  background-color: rgb(218, 84, 84);
   display: inline-block;
 }
 
@@ -232,4 +232,8 @@
 }
 .inputfile + label {
 	cursor: pointer; /* "hand" cursor */
+}
+.inputfile:focus + label {
+	outline: 1px dotted #000;
+	outline: -webkit-focus-ring-color auto 5px;
 }
