--- a/app/views/raffles/new.slim
+++ b/app/views/raffles/new.slim
@@ -55,4 +55,4 @@ header.header
       .form-group
         input.form-control name="raffle[number]" type="hidden" value="#{@number}" 
       .form-group
-        button.form-control.btn.btn-primary.btn-lg.btn-block type="submit"  Validad Compra
+        button.form-control.btn.btn-primary.btn-lg.btn-block type="submit"  Presione para validar sus números.
