--- a/app/views/raffles/paid.slim
+++ b/app/views/raffles/paid.slim
@@ -3,13 +3,15 @@
     h1 = Raffle.all.count
 .row.border
   - @raffles.each do |raffle|
-    .col-3
-      p = raffle.name
-    .col-3
-      p = raffle.phone
-    .col-3
-      p = raffle.mail
     .col-2
-      p = raffle.number
-    .col-1
-      = link_to 'Editar', edit_raffle_path(raffle.id), class: 'btn btn-primary'
+      p[style='font-size: 8px'] = raffle.name
+    .col-2
+      p[style='font-size: 8px'] = raffle.phone
+    .col-2
+      p[style='font-size: 8px'] = raffle.mail
+    .col-2
+      p[style='font-size: 8px'] = raffle.number
+    .col-2
+      = link_to 'Editar', edit_raffle_path(raffle.id), class: 'btn btn-primary' 
+    .col-2
+      = link_to 'delete', raffle_path(raffle.id) , :method => :delete, class: 'btn btn-secondary' 
