--- a/app/views/raffles/paid.slim
+++ b/app/views/raffles/paid.slim
@@ -4,14 +4,14 @@
 .row.border
   - @raffles.each do |raffle|
     .col-2
-      p[style='font-size: 8px'] = raffle.name
+      p[style='font-size: 12px'] = raffle.name
     .col-2
-      p[style='font-size: 8px'] = raffle.phone
+      p[style='font-size: 12px'] = raffle.phone
     .col-2
-      p[style='font-size: 8px'] = raffle.mail
+      p[style='font-size: 12px'] = raffle.mail
     .col-2
-      p[style='font-size: 8px'] = raffle.number
+      p[style='font-size: 12px'] = raffle.number
     .col-2
-      = link_to 'Editar', edit_raffle_path(raffle.id), class: 'btn btn-primary' 
+      = link_to 'E', edit_raffle_path(raffle.id), class: 'btn btn-primary' 
     .col-2
-      = link_to 'delete', raffle_path(raffle.id) , :method => :delete, class: 'btn btn-secondary' 
+      = link_to 'B', raffle_path(raffle.id) , :method => :delete, class: 'btn btn-secondary' 
