--- a/app/javascript/scss/app.scss
+++ b/app/javascript/scss/app.scss
@@ -6,8 +6,8 @@
   --text-light: rgb(68, 57, 57);
   --text-dark: hsl(300, 79%, 4%);
   --accent-color:hsl(323, 83%, 84%);
-  --hover-accent-color: hsl(323, 100%, 76%);
-  --active-accent-color: rgb(162, 130, 165);
+  --hover-accent-color: hsl(4, 98%, 63%);
+  --active-accent-color: rgb(79, 216, 33);
   --bs-dark: var(--background-color);
 
   background-color: var(--background-color);
@@ -28,12 +28,14 @@
     text-decoration: none;
     width: 100%;
     height: 100%;
-    outline: 1px solid var(--accent-color);
+    // outline: 1px solid var(--accent-color);
     text-align: center;
     padding: 0.5rem 0.5rem;
     text-align: center;
     font-size: 2rem;
     cursor: pointer;
+    border-radius: 3rem;
+    border: 1px solid var(--accent-color);
   }
   .float{
     position:fixed;
@@ -51,12 +53,14 @@
   input[type="checkbox"]:checked + label {
     border: 1px solid white;
     color: white;
-    background-color: rgb(89, 0, 71);
+    background-color: var(--active-accent-color);
+    border-radius: 3rem;
   }
   input[type="checkbox"]:hover + label {
     border: 1px solid white;
     color: black;
-    background-color: rgb(201, 92, 170);
+    background-color: var(--active-accent-color);
+    border-radius: 3rem;
   }
   .after-nav{
     margin-top: 100px;
@@ -92,15 +96,16 @@
       display: grid;
       min-height: 100vh;
       grid-template-columns: repeat(10, 1fr) ;
-      grid-template-rows: repeat(50, 1fr);
+      grid-template-rows: repeat(70, 1fr);
   
       .day {
         color: black;
         text-decoration: none;
         width: 100%;
         height: 100%;
-        outline: 1px solid var(--accent-color);
+        //outline: 1px solid var(--accent-color);
         padding: 0.5rem;
+        border-radius:3rem;
   
         &:hover {
           background-color: var(--active-accent-color);
@@ -113,7 +118,6 @@
         }
   
         p.day-number {
-          padding: 0.5rem 0;
           text-align: center;
           font-size: 2rem;
         }
