--- a/app/javascript/scss/app.scss
+++ b/app/javascript/scss/app.scss
@@ -63,7 +63,7 @@
     border-radius: 3rem;
   }
   .after-nav{
-    margin-top: 100px;
+    margin: 5rem;
     p{
       text-align: justify;
       font-size: 15px;
