--- a/app/views/prices/index.slim
+++ b/app/views/prices/index.slim
@@ -17,14 +17,14 @@ header.header
     h1 Premios
   - @prices.each do |price|
     - anon = "%w[Anónimo Anonimo anónimo anonimo]"
-    - unless anon.include?(price.rrss)
-      = link_to "#{price.rrss}", class: 'col-5 prices-row m-2' do
+    - unless anon.include?(price.rrss) || !price.rrss.blank?
+      = link_to "#{price.rrss}", class: 'col-5 prices-row m-1' do
         span.shift-pill[style="background-color: black; color:white"] Ver Instagram
-        h3 = "#{price.number} #{price.name}"
+        h4 = "#{price.number} #{price.name}"
         p.card-text  = "#{price.description}"
     - else
-      .prices-row.col-5.m-2 
-        h3 = "#{price.number} #{price.name}"
+      .prices-row.col-5.m-1 
+        h4 = "#{price.number} #{price.name}"
         p.card-text  = "#{price.description}"
         
 
