--- a/app/views/prices/index.slim
+++ b/app/views/prices/index.slim
@@ -17,7 +17,7 @@ header.header
     h1 Premios
   - @prices.each do |price|
     - anon = "%w[Anónimo Anonimo anónimo anonimo]"
-    - unless anon.include?(price.rrss) || !price.rrss.blank?
+    - unless price.rrss.blank? || anon.include?(price&.rrss) 
       = link_to "#{price.rrss}", class: 'col-5 prices-row m-1' do
         span.shift-pill[style="background-color: black; color:white"] Ver Instagram
         h4 = "#{price.number} #{price.name}"
