--- a/app/views/prices/index.slim
+++ b/app/views/prices/index.slim
@@ -18,12 +18,12 @@ header.header
   - @prices.each do |price|
     - anon = "%w[Anónimo Anonimo anónimo anonimo]"
     - unless price.rrss.blank? || anon.include?(price&.rrss) 
-      = link_to "#{price.rrss}", class: 'col-5 prices-row m-1' do
+      = link_to "#{price.rrss}", class: 'col-6 prices-row ml-1' do
         span.shift-pill[style="background-color: black; color:white"] Ver Instagram
         h4 = "#{price.number} #{price.name}"
         p.card-text  = "#{price.description}"
     - else
-      .prices-row.col-5.m-1 
+      .prices-row.col-6.ml-1
         h4 = "#{price.number} #{price.name}"
         p.card-text  = "#{price.description}"
         
