--- a/app/views/prices/index.slim
+++ b/app/views/prices/index.slim
@@ -13,7 +13,7 @@ header.header
     h1 Valor : $1000 cada número
 
 .row.after-nav.center
-  .col-10
+  .col-sm-10
     h1 Premios
   - @prices.each do |price|
     - anon = "%w[Anónimo Anonimo anónimo anonimo]"
