--- a/app/views/raffles/index.slim
+++ b/app/views/raffles/index.slim
@@ -2,8 +2,8 @@
 - @raffles.each do |raffle|
   - raffles << raffle.number.to_s if raffle.paid = 'completed'
 header.header
-  nav.navbar.navbar-expand-lg.navbar-light.bg-light.fixed-top.container
-    a.navbar-brand.p-3 href="#{root_path}"  Volver a Premios
+  nav.navbar.navbar-light.bg-light.fixed-top
+    a.navbar-brand.p-2.text-black href="#{root_path}" << Volver
     
 .row.after-nav
   .col
