--- a/app/javascript/scss/app.scss
+++ b/app/javascript/scss/app.scss
@@ -50,6 +50,11 @@
     box-shadow: 2px 2px 3px #999;
     font-size: 35px;
   }
+  @media (max-width: 992px) {
+    .float {
+        float: none !important;
+    }
+  }
   input[type="checkbox"]:checked + label {
     border: 1px solid white;
     color: white;
