add some changes

--- a/app/views/raffles/index.slim
+++ b/app/views/raffles/index.slim
@@ -1,6 +1,6 @@
 - raffles = []
 - @raffles.each do |raffle|
-  - raffles << raffle.number.to_s if raffle.paid = 'completed'
+  - raffles << raffle.number.to_s
 header.header
   nav.navbar.navbar-light.bg-light.fixed-top
     a.navbar-brand.p-2.text-black href="#{root_path}" << Volver
