--- a/app/views/prices/index.slim
+++ b/app/views/prices/index.slim
@@ -9,7 +9,8 @@ header.header
   .col-sm-4
     = image_tag("rifaportada.png", class: 'img-fluid p-2')
   .col-sm-8
-    p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et fermentum nisl. Duis mauris diam, feugiat quis eros ut, ornare sodales justo. Nam vitae lectus interdum lorem blandit feugiat. Donec sed justo iaculis, scelerisque nunc vel, dignissim tellus. Morbi eget blandit massa, ac imperdiet orci. Maecenas bibendum tellus non libero posuere, luctus auctor nisl tristique. Etiam auctor sit amet dolor eu euismod. Sed pharetra velit augue, vel tempor risus lobortis id. Suspendisse blandit neque ultricies dapibus elementum.
+    p Luego de la primera operación tuvimos algunas complicaciones, las cuales nos significo, 3 hospitalizaciones en menos de un mes, ademas de una segunda operación.
+    p Lo que se recaude en esta rifa nos ayudara a seguir pagando esta enfermedad. Gracias
     h1 Valor : $1000 cada número
 
 .row.after-nav.center
