--- a/app/views/raffles/paid.slim
+++ b/app/views/raffles/paid.slim
@@ -3,11 +3,11 @@
     table.m-2.border
       tr.border
         th.p-2 Total Pagados
-        th.p-2 Otros estados 
+        th.p-2 Otros created 
         th.p-2 Fallados 
       tr.border
         td.p-2 = @raffles.where(paid: 'completed').count
-        td.p-2 = @raffles.where.not(paid: 'completed', paid: 'failed').count
+        td.p-2 = @raffles.where(paid: 'created').count
         td.p-2 = @raffles.where(paid: 'failed').count
 - @raffles.each do |raffle|
   .row.border
