--- a/app/views/prices/index.slim
+++ b/app/views/prices/index.slim
@@ -9,8 +9,9 @@ header.header
   .col-sm-4
     = image_tag("rifaportada.png", class: 'img-fluid p-2')
   .col-sm-8
-    p Luego de la primera operación tuvimos algunas complicaciones, las cuales nos significo, 3 hospitalizaciones en menos de un mes, ademas de una segunda operación.
-    p Lo que se recaude en esta rifa nos ayudara a seguir pagando esta enfermedad. Gracias
+    p Luego de la primera operación tuvimos algunas complicaciones, las cuales nos significó 3 hospitalizaciones en menos de un mes, además de una segunda operación.
+    p Lo que se recaude en esta rifa nos ayudará a seguir pagando esta enfermedad. Gracias
+
     h1 Valor : $1000 cada número
 
 .row.after-nav.center
