Modifies the structure and makes it compliant

--- a/app/views/raffles/edit.slim
+++ b/app/views/raffles/edit.slim
@@ -5,7 +5,7 @@
         .form-control-label for="name" Nombre 
         input#name.form-control value="#{@raffle&.name}" name="raffle[name]" type="text"
       .form-group
-        .form-control-label for="phone" Telefono
+        .form-control-label for="phone" Teléfono
         input#phone.form-control value="#{@raffle&.phone}"  name="raffle[phone]" type="text"
       .form-group
         .form-control-label for="email" Email
