--- a/app/views/prices/index.slim
+++ b/app/views/prices/index.slim
@@ -17,19 +17,18 @@ header.header
 .row.after-nav.center
   .col-sm-10
     h1 Premios
-  - @prices.each do |price|
-    - anon = "%w[Anónimo Anonimo anónimo anonimo]"
-    - unless price.rrss.blank? || anon.include?(price&.rrss) 
-      = link_to "#{price.rrss}", target: '_blank', class: 'col-6 prices-row ml-1' do
-        span.shift-pill[style="background-color: black; color:white"] Ver Instagram
-        h4 = "#{price.number} #{price.name}"
-        p.card-text  = "#{price.description}"
-    - else
-      .prices-row.col-6.ml-1
-        h4 = "#{price.number} #{price.name}"
-        p.card-text  = "#{price.description}"
-        
-
+    .row
+      - @prices.each do |price|
+        - anon = "%w[Anónimo Anonimo anónimo anonimo]"
+        - unless price.rrss.blank? || anon.include?(price&.rrss) 
+          = link_to "#{price.rrss}", target: '_blank', class: 'col-6 prices-row ml-1' do
+            span.shift-pill[style="background-color: black; color:white"] Ver Instagram
+            h4 = "#{price.number} #{price.name}"
+            p.card-text  = "#{price.description}"
+        - else
+          .prices-row.col-6.ml-1
+            h4 = "#{price.number} #{price.name}"
+            p.card-text  = "#{price.description}"
 
 css:
   .aspect-16to9 {
