--- a/app/views/raffles/response_status.slim
+++ b/app/views/raffles/response_status.slim
@@ -5,16 +5,15 @@
         h1 Gracias por ayudar
         p Estaremos informando cuando será el sorteo.
         p recuerda que Camila estará en contacto contigo para agradecer y comentar que tu recibo esta ok.
-      .col-12
-        = image_tag("gracias-vuelva-prontos.jpg", class: 'img-fluid p-2')
-      .col-12
-        = link_to raffles_path, class: 'btn btn-primary' do
-          h2 volver a la lista
+        .d-grid
+          = image_tag("gracias-vuelva-prontos.jpg", class: 'img-fluid p-2')
+        .d-grid
+          = link_to 'Volver a la lista', raffles_path, class: 'btn btn-primary btn-lg'
   - if @status != 'completed'
     .row 
       .col-12
         h1 Ops! Tenemos un problema.
         p Tu transacción resulto fallida, debes intentarlo nuevamente.
-        = link_to raffles_path, class: 'btn btn-primary' do
-          h2 volver a la lista
+        .d-grid
+          = link_to 'Volver a la lista' raffles_path, class: 'btn btn-primary btn-lg'
       
