--- a/app/views/prices/index.slim
+++ b/app/views/prices/index.slim
@@ -7,10 +7,12 @@ header.header
 .row.after-nav.description
   h1 Rifa
   .col-sm-4
-    = image_tag("rifaportada.png", class: 'img-fluid p-2')
+    = image_tag("imagenrifa.png", class: 'img-fluid p-2')
   .col-sm-8
-    p Luego de la primera operación tuvimos algunas complicaciones, las cuales nos significó 3 hospitalizaciones en menos de un mes, además de una segunda operación.
-    p Lo que se recaude en esta rifa nos ayudará a seguir pagando esta enfermedad. Gracias
+    p Hola soy Cristian (o wawito, como usted me conozca), Soy Fotografo por hobbie, y en febrero de este año, ante la necesidad de tener algo de practica y tener registro de las competiciones principalmente en la comuna de las condes, nace Acierto Fotografico Deportivo.
+    p Si bien esta idea nace sin fines de lucrar, semana a semana costeo algunos gastos por seguir a clubes, fotografiar distintos deportes y tener algo de experiencia como fotografo.
+    p Pero este último tiempo han aparecido competiciones deportivas que se realizan más de noche como la liga apoquindo y el torneo femenino, las cuales con el equipo que cuento, no es posible fotografíar. Y al ser una actividad que se realiza de corazón y para la gente no tengo la posibilidad de costear un upgrade del equipamiento. 
+    p Es por ello que pongo a disposición un rifa profondos, para poder costear algo de este equipamiento con el cual quiero alcanzar más deportes y mas fotos.
 
     h1 Valor : $1000 cada número
 
