--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rifa Camila </title>
+    <title>Rifa Acierto Fotográfico - 2022</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
