--- a/app/views/prices/index.slim
+++ b/app/views/prices/index.slim
@@ -13,6 +13,8 @@ header.header
     p Si bien esta idea nace sin fines de lucrar, semana a semana costeo algunos gastos por seguir a clubes, fotografiar distintos deportes y tener algo de experiencia como fotografo.
     p Pero este último tiempo han aparecido competiciones deportivas que se realizan más de noche como la liga apoquindo y el torneo femenino, las cuales con el equipo que cuento, no es posible fotografíar. Y al ser una actividad que se realiza de corazón y para la gente no tengo la posibilidad de costear un upgrade del equipamiento. 
     p Es por ello que pongo a disposición un rifa profondos, para poder costear algo de este equipamiento con el cual quiero alcanzar más deportes y mas fotos.
+    hr
+    p Fecha de sorteo : 30 de Junio o cuando se complete la rifa.
 
     h1 Valor : $1000 cada número
 
