--- a/app/views/raffles/response_status.slim
+++ b/app/views/raffles/response_status.slim
@@ -3,8 +3,8 @@
     .row 
       .col-12
         h1 Gracias por ayudar
-        p Estaremos informando cuando será el sorteo.
-        p recuerda que Camila estará en contacto contigo para agradecer y comentar que tu recibo esta ok.
+        p Recuerda que el sorteo se realizara el 30 de Junio de 2022
+        p Si tenemos algún problema en el proceso te lo informaremos, de todas formas guarda un pantallazo de esta página.
       .col-12
         = image_tag("gracias-vuelva-prontos.jpg", class: 'img-fluid p-2')
       .col-12
